--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/menu_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,25 +10,37 @@
     android:padding="15dp">
 
     <ImageView
-        android:id="@+id/item_image"
+        android:id="@+id/food_image"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginBottom="10dp"
         android:scaleType="centerInside"
-        app:layout_constraintBottom_toTopOf="@id/item_name"
+        app:layout_constraintBottom_toTopOf="@id/food_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/item_name"
+        android:id="@+id/food_name"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/food_buy"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/food_image"
+        tools:text="Еда" />
+
+    <Button
+        android:id="@+id/food_buy"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_image"
-        tools:text="Еда" />
+        app:layout_constraintTop_toBottomOf="@+id/food_name"
+        tools:text="Купить за "/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
