--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -23,6 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/arrow_back_24"
+            android:backgroundTint="@color/primaryVariant"
+            app:tint="@color/icons"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +45,7 @@
         android:id="@+id/cart"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginVertical="15dp"
         app:layout_constraintBottom_toTopOf="@id/buy_all"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +57,7 @@
         android:layout_height="wrap_content"
         android:textAllCaps="true"
         android:textSize="20sp"
+        android:backgroundTint="@color/secondary"
         app:layout_constraintTop_toBottomOf="@id/cart"
         app:layout_constraintBottom_toTopOf="@id/clear_all"
         app:layout_constraintEnd_toEndOf="parent"
