--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/shape_rounded_rect"
-        android:backgroundTint="#eeeeee">
+        android:backgroundTint="?attr/colorPrimaryVariant">
 
         <TextView
             android:layout_width="wrap_content"
@@ -40,7 +40,7 @@
             android:autofillHints="username"
             android:inputType="textEmailAddress"
             android:background="@drawable/shape_rounded_rect"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/background"
             android:layout_marginBottom="12dp"/>
 
         <EditText
@@ -53,7 +53,7 @@
             android:autofillHints="password"
             android:inputType="textPassword"
             android:background="@drawable/shape_rounded_rect"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/background"
             android:layout_marginBottom="20dp" />
 
         <Button
