--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/shape_rounded_rect"
-    android:backgroundTint="#C4B8DF"
+    android:backgroundTint="@color/primaryVariant"
     android:layout_margin="10dp"
     android:padding="15dp">
 
