--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#677F03</color>
+    <color name="primaryVariant">#F6F8EC</color>
+    <color name="secondary">#FC9B68</color>
+    <color name="background">@color/white</color>
+    <color name="icons">@color/black</color>
 </resources>
