--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CartActivity">
+    tools:context=".CheckoutActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -15,11 +15,10 @@
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/cart">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/cart_back_button"
+            android:id="@+id/checkout_back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/arrow_back_24"
@@ -32,45 +31,36 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cart"
+            android:text="@string/checkout"
             android:textSize="30sp"
             android:textColor="@color/white"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/cart_back_button"/>
+            app:layout_constraintStart_toEndOf="@id/checkout_back_button"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cart"
+    <EditText
+        android:id="@+id/address"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginVertical="15dp"
-        app:layout_constraintBottom_toTopOf="@id/buy_all"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:hint="@string/enter_address"
+        android:inputType="textPostalAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <Button
-        android:id="@+id/buy_all"
+        android:id="@+id/make_order"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:textSize="20sp"
         android:backgroundTint="@color/secondary"
-        app:layout_constraintTop_toBottomOf="@id/cart"
-        app:layout_constraintBottom_toTopOf="@id/clear_all"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/clear_all"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/clear_cart"
+        android:text="@string/make_order"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/buy_all"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
