--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -30,6 +30,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:id="@+id/food_user"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/ic_user"
