--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -29,6 +29,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:id="@+id/menu_user"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/ic_user"
