--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,14 +31,14 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/register_login_input"
+            android:id="@+id/register_phone_input"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:paddingHorizontal="8dp"
             android:textSize="18sp"
-            android:hint="@string/enter_login"
+            android:hint="@string/enter_phone"
             android:autofillHints="username"
-            android:inputType="textEmailAddress"
+            android:inputType="phone"
             android:background="@drawable/shape_rounded_rect"
             android:backgroundTint="@color/background"
             android:layout_marginBottom="12dp"/>
@@ -54,7 +54,7 @@
             android:inputType="textPassword"
             android:background="@drawable/shape_rounded_rect"
             android:backgroundTint="@color/background"
-            android:layout_marginBottom="20dp" />
+            android:layout_marginBottom="12dp"/>
 
         <EditText
             android:id="@+id/register_password_repeat"
